Fixed alignment issues

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -543,8 +543,6 @@ h6 {
     }
     .research .section2-text {
         width: 500px;
-        left: 35%;
-        margin-left: -230px;
         margin-top: -100px;
     }
     .design .design-img img {
@@ -668,7 +666,7 @@ h6 {
     .app-dev .section4-text {
         z-index: 1;
         width: 531px;
-        margin-left: 103px;
+        margin-left: 50px;
     }
     .app-dev h2 {
         font-size: 18px;
@@ -691,6 +689,28 @@ h6 {
         margin: 0;
         background-size: 580px;
         height: 457px;
+    }
+}
+
+@media (max-width: 767px) {
+    .research .col-xs-12 {
+        padding-left: 0;
+        padding-right: 0;
+    }
+    .design .col-lg-12 {
+        padding-left: 0;
+        padding-right: 0;
+    } 
+    .app-dev .section4-text {
+        padding-left: 30px;
+        padding-right: 30px;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 1200px) {
+    .app-dev .section4-text {
+        padding-left: 40px;
+        padding-right: 40px;
     }
 }
 
@@ -832,6 +852,12 @@ footer .second-row .row {
     margin-right: 0;
 }
 
+@media only screen and (min-width: 767px) {
+    footer .second-row .row {
+        margin-left: 55px;
+    }
+}
+
 footer .second-row .row a {
     color: white;
 }
@@ -945,11 +971,14 @@ p.copyright {
     padding-bottom: 220px;
 }
 
-@media only screen and (max-width: 650px) {
+@media only screen and (max-width: 992px) {
     .product-development {
         padding-bottom: 0;
+        padding-left: 30px;
+        padding-right: 30px;
     }
 }
+
 
 .product-development-items {
     padding-left: 10px;
@@ -1363,7 +1392,7 @@ p.copyright {
  @media only screen and (min-width: 480px) and (max-width: 991px) {
     .project-management {
         margin-top: 135px;
-        padding-bottom: 300px;
+        padding-bottom: 450px;
     }
     .project-management img {
        margin: -125px auto 70px auto;
@@ -1399,6 +1428,19 @@ p.copyright {
     .support .fixed-div {
         margin-bottom: 100px;
         padding-left: 50px;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .support .fixed-div {
+       padding-left: 15px;
+       padding-right: 15px;
+    }
+}
+@media only screen and (max-width: 1200px) {
+    .support .fixed-div {
+       padding-left: 30px;
+       padding-right: 30px;
     }
 }
 
